--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.10",
     "sass": "^1.68.0"
   }
 }
