--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-responsive-carousel": "^3.2.23",
+    "sharp": "^0.32.6",
     "typescript": "5.2.2"
   },
   "devDependencies": {
