--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "freeice": "^2.2.2",
     "next": "13.5.2",
     "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^9.1.3",
     "sharp": "^0.32.6",
-    "typescript": "5.2.2"
+    "socket.io-client": "^4.7.2",
+    "typescript": "5.2.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react-slick": "^0.23.10",
+    "@types/uuid": "^9.0.4",
     "sass": "^1.68.0"
   }
 }
