--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "framer-motion": "^10.16.4",
     "freeice": "^2.2.2",
     "next": "13.5.2",
     "prettier": "^3.0.3",
