--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.3",
     "sharp": "^0.32.6",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.2",
     "typescript": "5.2.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react-slick": "^0.23.10",
+    "@types/simple-peer": "^9.11.6",
     "@types/uuid": "^9.0.4",
     "sass": "^1.68.0"
   }
