--- a/package.json
+++ b/package.json
@@ -9,27 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
-    "freeice": "^2.2.2",
+    "local-storage": "^2.0.0",
     "next": "13.5.2",
+    "next-auth": "^4.23.2",
     "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.4.5",
+    "react-redux": "^8.1.3",
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.3",
     "sharp": "^0.32.6",
-    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.2",
     "typescript": "5.2.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react-slick": "^0.23.10",
-    "@types/simple-peer": "^9.11.6",
     "@types/uuid": "^9.0.4",
     "sass": "^1.68.0"
   }
