--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
     "local-storage": "^2.0.0",
-    "next": "13.5.2",
+    "next": "^14.0.3",
     "next-auth": "^4.23.2",
     "prettier": "^3.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.4.5",
     "react-redux": "^8.1.3",
     "react-responsive-carousel": "^3.2.23",
