--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.2.7",
     "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
+    "jsonwebtoken": "^9.0.2",
     "local-storage": "^2.0.0",
     "next": "^14.0.3",
     "next-auth": "^4.23.2",
@@ -32,6 +33,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/react-slick": "^0.23.10",
     "@types/uuid": "^9.0.4",
     "sass": "^1.68.0"
