--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.2.7",
     "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
+    "joi": "^17.12.0",
     "jsonwebtoken": "^9.0.2",
     "local-storage": "^2.0.0",
     "next": "^14.0.3",
