--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.4.5",
     "react-redux": "^8.1.3",
-    "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.3",
     "sharp": "^0.32.6",
     "socket.io-client": "^4.7.2",
+    "swiper": "^11.0.5",
     "typescript": "5.2.2",
     "uuid": "^9.0.1"
   },
