--- a/package.json
+++ b/package.json
@@ -9,18 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/inter": "^5.0.17",
+    "@fontsource/poppins": "^5.0.13",
+    "@mui/material": "^5.15.15",
+    "@mui/material-nextjs": "^5.15.11",
+    "@mui/x-date-pickers": "^7.2.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "axios": "^1.5.1",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.4.3",
     "framer-motion": "^10.16.4",
+    "i": "^0.3.7",
     "joi": "^17.12.0",
     "jsonwebtoken": "^9.0.2",
+    "libphonenumber-js": "^1.10.60",
     "local-storage": "^2.0.0",
     "next": "^14.0.3",
+    "npm": "^10.5.2",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,6 +43,7 @@
     "sharp": "^0.32.6",
     "socket.io-client": "^4.7.2",
     "swiper": "^11.0.5",
+    "tss-react": "^4.9.6",
     "typescript": "5.2.2",
     "uuid": "^9.0.1"
   },
