--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.5",
     "@fontsource/inter": "^5.0.17",
     "@fontsource/poppins": "^5.0.13",
+    "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.15.15",
     "@mui/material-nextjs": "^5.15.11",
     "@mui/x-date-pickers": "^7.2.0",
