--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "axios": "^1.5.1",
+    "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.3",
     "framer-motion": "^10.16.4",
