--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "swiper": "^11.0.5",
     "tss-react": "^4.9.6",
     "typescript": "5.2.2",
+    "use-debounce": "^10.0.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
